[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dan Williams"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true     # Automatically strip symbols from the binary
opt-level = "z"  # Optimise for size
lto = true       # Enable link-time optimisation

[workspace.dependencies]
rubedo = { path = "./crates/rubedo", version = "0.0.1" }
rubedo-macros = { path = "./crates/rubedo-macros", version = "0.0.1" }
