[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.5"
edition = "2021"
license = "MIT"
authors = ["Dan Williams <dan@dotfive.co.uk>"]
repository = "https://github.com/danwilliams/rubedo"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true     # Automatically strip symbols from the binary
opt-level = 3    # Maximum optimisation (this is the cargo default)
lto = "thin"     # Enable link-time optimisation (fast)

[workspace.dependencies]
rubedo = { path = "./crates/rubedo", version = "0.0.1" }
rubedo-macros = { path = "./crates/rubedo-macros", version = "0.0.1" }
