[package]
name = "rubedo-macros"
version = "0.4.0"
description = "Proc macros for Rubedo"
categories = ["development-tools"]
keywords = ["macro", "library", "utility"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"

[dev-dependencies]
trybuild = "1.0.85"
