[package]
name                    = "rubedo-macros"
version                 = "0.6.3"
description             = "Proc macros for Rubedo"
categories              = ["development-tools"]
keywords                = ["macro", "library", "utility"]
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
documentation.workspace = true
repository.workspace    = true
readme                  = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

#==============================[  DEPENDENCIES  ]===============================

[dependencies]
quote              = "1.0.40"

[dev-dependencies]
trybuild           = "1.0.105"

#=================================[  LINTS  ]===================================

[lints]
workspace = true
