[package]
name                 = "rubedo"
version              = "0.5.4"
description          = "Library of useful functionality and extensions"
categories           = ["development-tools"]
keywords             = ["library", "utility"]
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
readme               = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#==============================[  DEPENDENCIES  ]===============================

[dependencies]
axum               = "0.7.5"
base64             = "0.22.1"
bytes              = "1.7.1"
chrono             = { version = "0.4.38", features = ["alloc", "clock", "std"] }
digest             = { version = "0.10.7", features = ["rand_core"] }
ed25519-dalek      = { version = "2.1.1", features = ["rand_core"] }
futures            = "0.3.30"
futures-util       = "0.3.30"
generic-array      = "0.14.7" # Cannot move to 1.0.0 until the digest crate does
hex                = "0.4.3"
http               = "1.1.0"
http-body-util     = "0.1.2"
hyper              = "1.4.1"
rand_core          = "0.6.4"
rubedo-macros      = { path = "../rubedo-macros", version = "0.5.4" }
rust_decimal       = "1.36.0"
serde              = { version = "1.0.209", features = ["derive"] }
serde_json         = { version = "1.0.128", features = ["preserve_order"] }
sha2               = "0.10.8"
tokio              = { version = "1.40.0", features = ["fs", "io-std", "io-util", "macros"] }

[dev-dependencies]
assert-json-diff   = "2.0.2"
claims             = "0.7.1"
hyper-util         = { version = "0.1.7", features = ["client-legacy"] }
rand               = "0.8.5"
serde_assert       = "0.8.0"
tempfile           = "3.12.0"

#=================================[  LINTS  ]===================================

[lints]
workspace = true
