[package]
name                    = "rubedo"
version                 = "0.6.3"
description             = "Library of useful functionality and extensions"
categories              = ["development-tools"]
keywords                = ["library", "utility"]
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
documentation.workspace = true
repository.workspace    = true
readme                  = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#================================[  FEATURES  ]=================================

[features]
#default = ["std", "sugar"] # Will be applied in the next minor version
default = ["full"]          # Current choice to avoid breaking changes - disable with { default-features = false }
full    = ["axum", "chrono", "crypto", "http", "serde", "std", "sugar"]
axum    = ["http",  "dep:axum"]
chrono  = ["sugar", "dep:chrono"]
crypto  = ["std",   "dep:digest", "dep:ed25519-dalek", "dep:generic-array", "dep:rand_core", "dep:sha2", "dep:tokio"]
http    = [         "dep:base64", "dep:bytes", "dep:futures", "dep:futures-util", "dep:http", "dep:http-body-util", "dep:hyper", "dep:serde", "dep:serde_json", "dep:thiserror"]
serde   = ["std",   "dep:serde"]
std     = [         "dep:base64", "dep:hex", "dep:rust_decimal", "dep:serde", "dep:thiserror"]
sugar   = [         "dep:rubedo-macros"]

#==============================[  DEPENDENCIES  ]===============================

[dependencies]
axum               = { optional = true, version = "0.8.4" }
base64             = { optional = true, version = "0.22.1" }
bytes              = { optional = true, version = "1.10.1" }
chrono             = { optional = true, version = "0.4.41", features = ["alloc", "clock", "std"] }
digest             = { optional = true, version = "0.10.7", features = ["rand_core"] }
ed25519-dalek      = { optional = true, version = "2.1.1", features = ["rand_core"] }
futures            = { optional = true, version = "0.3.31" }
futures-util       = { optional = true, version = "0.3.31" }
generic-array      = { optional = true, version = "0.14.7" } # Cannot move to 1.0.0 until the digest crate does
hex                = { optional = true, version = "0.4.3" }
http               = { optional = true, version = "1.3.1" }
http-body-util     = { optional = true, version = "0.1.3" }
hyper              = { optional = true, version = "1.6.0" }
rand_core          = { optional = true, version = "0.6.4" }
rubedo-macros      = { optional = true, version = "0.6.3", path = "../rubedo-macros" }
rust_decimal       = { optional = true, version = "1.37.1" }
serde              = { optional = true, version = "1.0.219", features = ["derive"] }
serde_json         = { optional = true, version = "1.0.140", features = ["preserve_order"] }
sha2               = { optional = true, version = "0.10.8" }
thiserror          = { optional = true, version = "2.0.12" }
tokio              = { optional = true, version = "1.45.1", features = ["fs", "io-std", "io-util", "macros"] }

[dev-dependencies]
assert-json-diff   = "2.0.2"
claims             = "0.8.0"
hyper-util         = { version = "0.1.13", features = ["client-legacy"] }
rand               = "0.8.5"
rubedo             = { path = ".", features = ["sugar"] }
serde_assert       = "0.8.0"
tempfile           = "3.20.0"
tokio              = { version = "1.45.1", features = ["fs", "io-std", "io-util", "macros"] }

#=================================[  LINTS  ]===================================

[lints]
workspace = true
